crates/uitest/fixtures/parser/enum_.snap
---
source: crates/uitest/tests/parser.rs
expression: diags
input_file: crates/uitest/fixtures/parser/enum_.fe
---
error[1-0001]: missing closing `)` for tuple type definition
  ┌─ enum_.fe:2:13
  │
2 │     X(u32, T
  │             ^ expected `)` or `,`

error[1-0001]: missing closing `}` for `enum` variant list
  ┌─ enum_.fe:2:13
  │
2 │     X(u32, T
  │             ^ expected `}` or `,`

error[1-0001]: missing closing `}` for `enum` variant list
  ┌─ enum_.fe:3:6
  │
3 │     A
  │      ^ expected `}` or `,`

error[1-0001]: unexpected syntax while parsing `enum` variant list
  ┌─ enum_.fe:4:15
  │
4 │     Y(T, u32) A
  │               ^ unexpected

error[1-0001]: missing closing `}` for `enum` variant list
  ┌─ enum_.fe:4:16
  │
4 │     Y(T, u32) A
  │                ^ expected `}` or `,`


